tests/error/enum_errors/multi_assign_variant.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:
    A = B = {}  # noqa: RUF012


MyEnum.compile()
